added link read-blog-mobile of articles-news for mob screen

--- a/index.html
+++ b/index.html
@@ -749,11 +749,11 @@
         <div class="title-wrapper">
           <h2 class="section-title">Найпопулярніші товари</h2>
           <a href="#" class="view-all"
-          >Дивитись всі
-          <svg class="icon-small">
-            <use href="./images/sprite.svg#arrowview-all"></use>
-          </svg>
-        </a>
+            >Дивитись всі
+            <svg class="icon-small">
+              <use href="./images/sprite.svg#arrowview-all"></use>
+            </svg>
+          </a>
         </div>
         <ul class="list list-products">
           <li class="item-products">
@@ -1647,68 +1647,74 @@
           </div>
         </div>
         <ul class="list list-articles">
-            <li class="item-articles">
-              <div class="wrapper-img">
-                <img
-                  src="./images/articles-news/chairs-living-room.jpg"
-                  alt="стільці для вітальні"
-                  width="410"
-                  height="270"
-                />
-              </div>
-              <div class="title-detail">
-                <p class="news-title added-height">
-                  Стільці для вітальні. Як правильно вибрати?
-                </p>
-                <a href="#" class="link-detail"
-                  >Детальніше
-                  <svg class="icon-small">
-                    <use href="./images/sprite.svg#arrowview-all"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-            <li class="item-articles">
+          <li class="item-articles">
+            <div class="wrapper-img">
               <img
-                src="./images/articles-news/kitchen.jpg"
-                alt="стільці і кухонний куточок"
+                src="./images/articles-news/chairs-living-room.jpg"
+                alt="стільці для вітальні"
                 width="410"
                 height="270"
-                class="img-articles"
               />
-              <div class="title-detail">
-                <p class="news-title">
-                  Що краще вибрати для кухні – стільці чи кухонний куточок?
-                </p>
-                <a href="#" class="link-detail"
-                  >Детальніше
-                  <svg class="icon-small">
-                    <use href="./images/sprite.svg#arrowview-all"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-            <li class="item-articles">
-              <img
-                src="./images/articles-news/furniture-living-room.jpg"
-                alt="меблі для вітальні"
-                width="410"
-                height="270"
-                class="img-articles"
-              />
-              <div class="title-detail">
-                <p class="news-title">
-                  Оформлення вітальні. Які м'які меблі краще вибрати?
-                </p>
-                <a href="#" class="link-detail"
-                  >Детальніше
-                  <svg class="icon-small">
-                    <use href="./images/sprite.svg#arrowview-all"></use>
-                  </svg>
-                </a>
-              </div>
-            </li>
-          </ul>
+            </div>
+            <div class="title-detail">
+              <p class="news-title added-height">
+                Стільці для вітальні. Як правильно вибрати?
+              </p>
+              <a href="#" class="link-detail"
+                >Детальніше
+                <svg class="icon-small">
+                  <use href="./images/sprite.svg#arrowview-all"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+          <li class="item-articles">
+            <img
+              src="./images/articles-news/kitchen.jpg"
+              alt="стільці і кухонний куточок"
+              width="410"
+              height="270"
+              class="img-articles"
+            />
+            <div class="title-detail">
+              <p class="news-title">
+                Що краще вибрати для кухні – стільці чи кухонний куточок?
+              </p>
+              <a href="#" class="link-detail"
+                >Детальніше
+                <svg class="icon-small">
+                  <use href="./images/sprite.svg#arrowview-all"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+          <li class="item-articles">
+            <img
+              src="./images/articles-news/furniture-living-room.jpg"
+              alt="меблі для вітальні"
+              width="410"
+              height="270"
+              class="img-articles"
+            />
+            <div class="title-detail">
+              <p class="news-title">
+                Оформлення вітальні. Які м'які меблі краще вибрати?
+              </p>
+              <a href="#" class="link-detail"
+                >Детальніше
+                <svg class="icon-small">
+                  <use href="./images/sprite.svg#arrowview-all"></use>
+                </svg>
+              </a>
+            </div>
+          </li>
+        </ul>
+        <a href="#" class="read-blog-mobile">
+          <svg class="icon-small">
+            <use href="./images/sprite.svg#arrow-view-all-white"></use>
+          </svg>
+          Читати блог
+        </a>
       </div>
     </section>
     <!-- ПРО: ПЕРЕВАГИ -->
