added styles of wrapper-img

--- a/index.html
+++ b/index.html
@@ -1669,13 +1669,14 @@
             </div>
           </li>
           <li class="item-articles">
-            <img
-              src="./images/articles-news/kitchen.jpg"
-              alt="стільці і кухонний куточок"
-              width="410"
-              height="270"
-              class="img-articles"
-            />
+            <div class="wrapper-img">
+              <img
+                src="./images/articles-news/kitchen.jpg"
+                alt="стільці і кухонний куточок"
+                width="410"
+                height="270"
+              />
+            </div>
             <div class="title-detail">
               <p class="news-title">
                 Що краще вибрати для кухні – стільці чи кухонний куточок?
@@ -1689,13 +1690,14 @@
             </div>
           </li>
           <li class="item-articles">
-            <img
-              src="./images/articles-news/furniture-living-room.jpg"
-              alt="меблі для вітальні"
-              width="410"
-              height="270"
-              class="img-articles"
-            />
+            <div class="wrapper-img">
+              <img
+                src="./images/articles-news/furniture-living-room.jpg"
+                alt="меблі для вітальні"
+                width="410"
+                height="270"
+              />
+            </div>
             <div class="title-detail">
               <p class="news-title">
                 Оформлення вітальні. Які м'які меблі краще вибрати?
