started change section about for adaptive layout (changed paddings)

--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
       </div>
     </section> -->
     <!-- НАЙПОПУЛЯРНІШІ ТОВАРИ -->
-    <section class="section popular-products">
+    <!-- <section class="section popular-products">
       <div class="container">
         <div class="title-wrapper">
           <h2 class="section-title">Найпопулярніші товари</h2>
@@ -1387,9 +1387,9 @@
           Показати ще товари
         </button>
       </div>
-    </section>
+    </section> -->
     <!-- АКЦІЇ -->
-    <section class="section shares">
+    <!-- <section class="section shares">
       <div class="container">
         <div class="title-wrapper">
           <h2 class="section-title">Акції</h2>
@@ -1478,7 +1478,7 @@
           <use href="./images/sprite.svg#points-shares-mob"></use>
         </svg>
       </div>
-    </section>
+    </section> -->
     <!-- ОСТАННІ ВІДГУКИ  -->
     <!-- <section class="section last-reviews">
       <div class="container wrapper-reviews">
@@ -1623,7 +1623,7 @@
       </div>
     </section> -->
     <!-- СВІЖІ СТАТТІ ТА ОСТАННІ НОВИНИ  -->
-    <section class="section articles-news">
+    <!-- <section class="section articles-news">
       <div class="container">
         <div class="title-wrapper">
           <h2 class="section-title">Свіжі статті та останні новини</h2>
@@ -1718,9 +1718,9 @@
           Читати блог
         </a>
       </div>
-    </section>
+    </section> -->
     <!-- ПРО: ПЕРЕВАГИ -->
-    <!-- <section class="section about">
+     <section class="section about">
         <div class="container">
           <h2 class="visually-hidden">Про</h2>
           <div class="wrapper-description">
@@ -1751,7 +1751,7 @@
               романтики або скандинавського лаконізму. ..
             </p>
           </div>
-          <section class="benefits">
+          <!-- <section class="benefits">
             <h2 class="visually-hidden">Переваги</h2>
             <ul class="list list-benefits">
               <li class="item-benefits">
@@ -1779,10 +1779,10 @@
                 <p class="benefits-text last-text">Знижки клієнтам</p>
               </li>
             </ul>
-          </section>
+          </section> -->
         </div>
       </section>  
-     </main>  -->
+     </main>  
     <!-- ФУТЕР -->
     <!-- <footer class="footer">
       <div class="container">
