changed structure and name about to about-benefit

--- a/index.html
+++ b/index.html
@@ -1719,16 +1719,16 @@
         </a>
       </div>
     </section> -->
-    <!-- ПРО: ПЕРЕВАГИ -->
-     <section class="section about">
+    <!-- СЕО-ПЕРЕВАГИ -->
+     <section class="section about-benefit">
         <div class="container">
-          <h2 class="visually-hidden">Про</h2>
-          <div class="wrapper-description">
+          <h2 class="visually-hidden">Про нас</h2>
+          <section class="about">
             <p class="after-title">
               KROVATO - коли потрібні якісні меблі за доступною ціною!
             </p>
-            <p class="about-text text-first">
-              Якщо в пошуковий рядок браузера ввести запит: «Куплю ліжко, шафу,
+            <p class="about-text">
+             <span class="indent-down"> Якщо в пошуковий рядок браузера ввести запит: «Куплю ліжко, шафу,
               диван», система видасть сотні продавців, що спеціалізуються з
               продажу цього товару. Але далеко не всі магазини та сайти в
               інтернеті можуть запропонувати такий самий різноманітний
@@ -1736,10 +1736,8 @@
               можуть мало хто. Адже товар ми отримуємо безпосередньо від
               виробників, не переплачуючи за послуги посередників. До того ж,
               продажі ми ведемо як онлайн, так і в салоні, при цьому ціна на
-              асортимент онлайн та офлайн - однакова.
-            </p>
-            <p class="about-text text-second">
-              Ми співпрацюємо тільки з найкращими вітчизняними та зарубіжними
+              асортимент онлайн та офлайн - однакова.</span>
+                               Ми співпрацюємо тільки з найкращими вітчизняними та зарубіжними
               фабриками та компаніями, які отримали визнання покупців та
               експертів меблевої справи. Для нас важливо, щоб товар, який ми
               продаємо, відповідав міжнародним стандартам якості, був із
@@ -1750,7 +1748,12 @@
               класичному та модерному стилі, лінійки для оформлення житла в дусі
               романтики або скандинавського лаконізму. ..
             </p>
-          </div>
+           <div class="about-shadow">
+            <svg width="60" height="60">
+              <use href="./images/sprite.svg#icon-arrow-down(weight)"></use>
+            </svg>
+           </div>
+          </section>
           <!-- <section class="benefits">
             <h2 class="visually-hidden">Переваги</h2>
             <ul class="list list-benefits">
