--- a/index.html
+++ b/index.html
@@ -1749,9 +1749,11 @@
               романтики або скандинавського лаконізму. ..
             </p>
            <div class="about-shadow">
-            <svg width="60" height="60">
+          <button type="button" class="button-shadow">
+            <svg class="icon-shadow">
               <use href="./images/sprite.svg#icon-arrow-down(weight)"></use>
             </svg>
+          </button>
            </div>
           </section>
           <!-- <section class="benefits">
