--- a/index.html
+++ b/index.html
@@ -1756,7 +1756,7 @@
           </button>
            </div>
           </section>
-          <!-- <section class="benefits">
+           <section class="benefits">
             <h2 class="visually-hidden">Переваги</h2>
             <ul class="list list-benefits">
               <li class="item-benefits">
@@ -1784,7 +1784,7 @@
                 <p class="benefits-text last-text">Знижки клієнтам</p>
               </li>
             </ul>
-          </section> -->
+          </section> 
         </div>
       </section>  
      </main>  
