started to change footer (wrapper-footer) of adaptive layout

--- a/index.html
+++ b/index.html
@@ -1720,7 +1720,7 @@
       </div>
     </section> -->
     <!-- СЕО-ПЕРЕВАГИ -->
-     <section class="section about-benefit">
+    <!-- <section class="section about-benefit">
         <div class="container">
           <h2 class="visually-hidden">Про нас</h2>
           <section class="about">
@@ -1786,18 +1786,169 @@
             </ul>
           </section> 
         </div>
-      </section>  
-     </main>  
+      </section>   -->
+    <!-- </main>   -->
     <!-- ФУТЕР -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <div class="wrapper-footer">
-          <div class="wrapper-item">
+          <div class="wrapper-item logo">
             <a href="/index.html" class="link-logo">
               <svg class="icon-footer">
                 <use href="./images/sprite.svg#logo-footer"></use>
               </svg>
             </a>
+          </div>
+          <div class="wrapper-item category">
+            <p class="footer-title category">
+              Категорії
+              <svg class="icon-arrow-top">
+                <use href="./images/sprite.svg#footer-arrow-top"></use>
+              </svg>
+            </p>
+            <ul class="list list-footer">
+              <li class="item-footer">
+                <a href="#" class="footer-link">Ліжка</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Матраци</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">М’які меблі</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Шафи</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Комоди</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Тумби</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Столи</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Стільці</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Меблеві стіни</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Кухні</a>
+              </li>
+            </ul>
+          </div>
+          <div class="wrapper-item informaion">
+            <p class="footer-title">
+              Інформація
+              <svg class="icon-arrow-top">
+                <use href="./images/sprite.svg#footer-arrow-down"></use>
+              </svg>
+            </p>
+            <ul class="list list-information">
+              <li class="item-footer">
+                <a href="#" class="footer-link">Про нас</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Оплата</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Доставка та збірка</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Відгуки</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Блог</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Контакти</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Мапа сайту</a>
+              </li>
+            </ul>
+          </div>
+          <div class="wrapper-item clients">
+            <p class="footer-title">
+              Клієнтам
+              <svg class="icon-arrow-top">
+                <use href="./images/sprite.svg#footer-arrow-down"></use>
+              </svg>
+            </p>
+            <ul class="list list-clients">
+              <li class="item-footer">
+                <a href="#" class="footer-link">Акції</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Розпродаж</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Купити в кредит</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Обмін і повернення товару</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Часто задавані питання</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Умови покупки</a>
+              </li>
+              <li class="item-footer">
+                <a href="#" class="footer-link">Політика конфіденційності</a>
+              </li>
+            </ul>
+          </div>
+          <div class="wrapper-item">
+            <div class="address-wrapper">
+              <svg class="icon-large icon-address">
+                <use href="./images/sprite.svg#footer-tel"></use>
+              </svg>
+              <address class="address">
+                <a
+                  href="tel:+380679294545"
+                  class="connection footer-connection phone"
+                  >+38 067 929-45-45
+                </a>
+                <a
+                  href="tel:+380501334545"
+                  class="connection footer-connection phone"
+                >
+                  +38 050 133-45-45
+                </a>
+                <a
+                  href="tel:+380931707545"
+                  class="connection footer-connection phone"
+                >
+                  +38 093 170-75-45</a
+                >
+                <p class="connection footer-call">Передзвоніть мені</p>
+              </address>
+            </div>
+            <div class="address-wrapper">
+              <svg class="icon-large icon-address">
+                <use href="./images/sprite.svg#footer-map"></use>
+              </svg>
+              <a
+                href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
+                class="connection footer-connection map"
+                target="_blank"
+                rel="nofollow noopener noreferrer"
+                >м. Київ, провулок Ізяславський 52, поверх 2</a
+              >
+            </div>
+            <div class="address-wrapper">
+              <svg class="icon-large icon-address">
+                <use href="./images/sprite.svg#calendar-footer"></use>
+              </svg>
+              <p class="connection footer-connection">
+                Працюємо щодня з 9:00 до 18:00
+              </p>
+            </div>
+          </div>
+          <div class="wrapper-item">
             <p class="footer-text join">Приєднуйтесь</p>
             <div class="links-social">
               <a
@@ -1882,146 +2033,12 @@
               </a>
             </div>
           </div>
-          <div class="wrapper-item">
-            <p class="footer-title">Інформація</p>
-            <ul class="list">
-              <li class="item-footer">
-                <a href="#" class="footer-link">Про нас</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Оплата</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Доставка та збірка</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Відгуки</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Блог</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Контакти</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Мапа сайту</a>
-              </li>
-            </ul>
-          </div>
-          <div class="wrapper-item">
-            <p class="footer-title">Категорії</p>
-            <ul class="list">
-              <li class="item-footer">
-                <a href="#" class="footer-link">Ліжка</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Матраци</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">М’які меблі</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Шафи</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Комоди</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Тумби</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Столи</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Стільці</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Меблеві стіни</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Кухні</a>
-              </li>
-            </ul>
-          </div>
-          <div class="wrapper-item">
-            <p class="footer-title">Клієнтам</p>
-            <ul class="list">
-              <li class="item-footer">
-                <a href="#" class="footer-link">Акції</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Розпродаж</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Купити в кредит</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Обмін і повернення товару</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Часто задавані питання</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Умови покупки</a>
-              </li>
-              <li class="item-footer">
-                <a href="#" class="footer-link">Політика конфіденційності</a>
-              </li>
-            </ul>
-          </div>
-          <div class="wrapper-item">
-            <div class="address-wrapper">
-              <svg class="icon-large icon-address">
-                <use href="./images/sprite.svg#footer-tel"></use>
-              </svg>
-              <address class="address">
-                <a
-                  href="tel:+380679294545"
-                  class="connection footer-connection phone"
-                  >+38 067 929-45-45
-                </a>
-                <a
-                  href="tel:+380501334545"
-                  class="connection footer-connection phone"
-                >
-                  +38 050 133-45-45
-                </a>
-                <a
-                  href="tel:+380931707545"
-                  class="connection footer-connection phone"
-                >
-                  +38 093 170-75-45</a
-                >
-                <p class="connection footer-call">Передзвоніть мені</p>
-              </address>
-            </div>
-            <div class="address-wrapper">
-              <svg class="icon-large icon-address">
-                <use href="./images/sprite.svg#footer-map"></use>
-              </svg>
-              <a
-                href="https://maps.app.goo.gl/33giWuNh9TgoFYhb8"
-                class="connection footer-connection map"
-                target="_blank"
-                rel="nofollow noopener noreferrer"
-                >м. Київ, провулок Ізяславський 52, поверх 2</a
-              >
-            </div>
-            <div class="address-wrapper">
-              <svg class="icon-large icon-address">
-                <use href="./images/sprite.svg#calendar-footer"></use>
-              </svg>
-              <p class="connection footer-connection">
-                Працюємо щодня з 9:00 до 18:00
-              </p>
-            </div>
-          </div>
         </div>
         <p class="copyright">
           &#169; KROVATO - Технології сну - 2022. Всі права захищені.
         </p>
       </div>
-    </footer> -->
+    </footer>
   </body>
 </html>
 
