--- a/index.html
+++ b/index.html
@@ -1790,7 +1790,7 @@
     <!-- </main>   -->
     <!-- ФУТЕР -->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <div class="wrapper-footer">
           <div class="wrapper-item logo">
             <a href="/index.html" class="link-logo">
