--- a/index.html
+++ b/index.html
@@ -1798,6 +1798,91 @@
                 <use href="./images/sprite.svg#logo-footer"></use>
               </svg>
             </a>
+            <div class="wrapper-item-desktop">
+              <p class="footer-text join">Приєднуйтесь</p>
+              <div class="links-social">
+                <a
+                  href="#"
+                  aria-label="Посилання на фейсбук"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  class="link-social"
+                >
+                  <svg class="icon-social">
+                    <use href="./images/sprite.svg#facebook"></use>
+                  </svg> </a
+                ><a
+                  href="#"
+                  aria-label="Посилання на інстаграм"
+                  target="_blank"
+                  rel="nofollow noopener noreferrer"
+                  class="link-social"
+                >
+                  <svg class="icon-social">
+                    <use href="./images/sprite.svg#instagram"></use>
+                  </svg>
+                </a>
+              </div>
+              <p class="footer-text help">Допомога і консультація:</p>
+              <div class="links-social secondary">
+                <a
+                  href="#"
+                  aria-label="Посилання на вацап"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  class="link-social"
+                >
+                  <svg class="icon-social">
+                    <use href="./images/sprite.svg#watsapp-footer"></use>
+                  </svg>
+                </a>
+                <a
+                  href="#"
+                  aria-label="Посилання на телеграм"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  class="link-social"
+                >
+                  <svg class="icon-social">
+                    <use href="./images/sprite.svg#telegram-footer"></use>
+                  </svg> </a
+                ><a
+                  href="#"
+                  aria-label="Посилання на вайбер"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  class="link-social"
+                >
+                  <svg class="icon-social">
+                    <use href="./images/sprite.svg#viber-footer"></use>
+                  </svg>
+                </a>
+              </div>
+              <div class="visa-mastercard">
+                <a
+                  href="#"
+                  aria-label="Посилання на віза"
+                  target="_blank"
+                  rel="nofollow noreferrer noopener"
+                  class="pay-systems link-visa"
+                >
+                  <svg class="icon-visa">
+                    <use href="./images/sprite.svg#visa"></use>
+                  </svg>
+                </a>
+                <a
+                  href="#"
+                  aria-label="Посилання на мастеркард"
+                  target="_blank"
+                  rel="nofollow noreferrer nofollow"
+                  class="pay-systems link-mastercard"
+                >
+                  <svg class="icon-mastercard">
+                    <use href="./images/sprite.svg#mastercard"></use>
+                  </svg>
+                </a>
+              </div>
+            </div>
           </div>
           <div class="wrapper-item category">
             <p class="footer-title category">
@@ -1846,7 +1931,7 @@
                 <use href="./images/sprite.svg#footer-arrow-down"></use>
               </svg>
             </p>
-            <ul class="list list-information">
+            <ul class="list list-footer list-information">
               <li class="item-footer">
                 <a href="#" class="footer-link">Про нас</a>
               </li>
@@ -1877,7 +1962,7 @@
                 <use href="./images/sprite.svg#footer-arrow-down"></use>
               </svg>
             </p>
-            <ul class="list list-clients">
+            <ul class="list list-footer list-clients">
               <li class="item-footer">
                 <a href="#" class="footer-link">Акції</a>
               </li>
@@ -1927,7 +2012,7 @@
                 <p class="connection footer-call">Передзвоніть мені</p>
               </address>
             </div>
-            <div class="address-wrapper">
+            <div class="address-wrapper town">
               <svg class="icon-large icon-address">
                 <use href="./images/sprite.svg#footer-map"></use>
               </svg>
@@ -1948,7 +2033,7 @@
               </p>
             </div>
           </div>
-          <div class="wrapper-item">
+          <div class="wrapper-item wrapper-item-mobile">
             <p class="footer-text join">Приєднуйтесь</p>
             <div class="links-social">
               <a
@@ -2014,7 +2099,7 @@
                 aria-label="Посилання на віза"
                 target="_blank"
                 rel="nofollow noreferrer noopener"
-                class="link-visa"
+                class="pay-systems link-visa"
               >
                 <svg class="icon-visa">
                   <use href="./images/sprite.svg#visa"></use>
@@ -2025,7 +2110,7 @@
                 aria-label="Посилання на мастеркард"
                 target="_blank"
                 rel="nofollow noreferrer nofollow"
-                class="link-mastercard"
+                class="pay-systems link-mastercard"
               >
                 <svg class="icon-mastercard">
                   <use href="./images/sprite.svg#mastercard"></use>
